fix: removed unecessary horizontal scrolling and display city name, country

--- a/weather-dashboard/src/style.css
+++ b/weather-dashboard/src/style.css
@@ -7,32 +7,3 @@ body {
   margin: 0;
   width: 100%;
 }
-
-/* @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    color: #ffffff;
-    background-color: #121212;
-  }
-
-  a:hover {
-    color: #9eaaff;
-  }
-
-  button {
-    background-color: #1e1e1e;
-    color: #ffffff;
-  }
-} */
